# programmiersprachen-raytracer

framework/: .scene.cpp.swp  .sdf_loader.cpp.swp  Box.hpp  Face.cpp  Face.hpp  Material.hpp  Ray.hpp  Shape.hpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  Trianglebox.hpp  box.cpp  camera.cpp  camera.hpp  color.hpp  composite.cpp  composite.hpp  image.cpp  image.hpp  imagewriter.cpp  imagewriter.hpp  intersection.hpp  light.cpp  light.hpp  pixel.cpp  pixel.hpp  raycaster.cpp  raycaster.hpp  renderer.cpp  renderer.hpp  rendertask.hpp  scene.cpp  scene.hpp  sdf_loader.cpp  sdf_loader.hpp  shape.cpp  sphere.cpp
source/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  animation_maker.cpp  cmake_install.cmake  example.cpp  example2.cpp  image.ppm  raytracer.cpp
source/Testing/Temporary/: CTestCostData.txt
source/framework/: Makefile  cmake_install.cmake
source/source/: Makefile  cmake_install.cmake
source/tests/: Makefile  cmake_install.cmake
tests/: main.cpp  mouse.sdf  scene.sdf  test.ppm
